# Vibe3D

./: .gitignore  README.md  crop_brc.py  mapping.sh
kitwarebrc/: Untitled.ipynb  analyze_dataset.py  camera_bbox_bounds.json  chart_marks.py  check_gt_dataset.ipynb  clean_100frames.ipynb  clean_gt_dataset.ipynb  dataset_processor.ipynb  dataset_processor.py  generate_manifest.sh  mapping_brc2.py  mapping_copy.sh  mini_preprocess_reid.py  preprocess_gpu.py  preprocess_kit_all.py  preprocess_kitware.py  preprocess_reid_gpu.py  pyproject.toml  reid_frames.ipynb  reid_frames.py  reid_multi_gpu.py  run_analyze.sh  run_mapping.sh  run_mini_preprocess_reid.sh  run_preprocess_reid_gpu.sh  run_reid_frames.sh  run_reid_multigpu.sh  show_frames.ipynb
kitwarebrc/src/kitbrc/: brc.py
kitwarebrc/src/kitbrc/annotations/: bounding_boxes.py
kitwarebrc/src/kitbrc/data/: video.py
kitwarebrc/src/kitbrc/utils/: __init__.py  utils.py
wacvw/: newtrain_all_rotmat.py  newtrain_all_rotmat.sh  process.sh  run_brc_data.sh  test-casiab.py  test-casiab.sh  train_all.py  train_all.sh  train_all_adv.py  train_all_adv.sh  train_tensor.sh  train_tensorboard.py  ztriplet.py
wacvw/lib/core/: config.py
wacvw/lib/data_utils/: amass_utils.py  brc2_silhouette.py  brc2_utils.py  brc_utils.py  casiab_utils.py  casiab_utils.py.bak  feature_extractor.py  humanid_utils.py
wacvw/lib/dataset/: __init__.py  brc.py  brc2.py  casiab.py  casiab.py.bak  humanid.py  loaders.py
wacvw/lib/models/: spin.py  vibe.py
